<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >


    <item
        android:id="@+id/mapa_normal"
        android:title="@string/Mapa_Normal"
        android:icon="@drawable/ic_action_map_default"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/mapa_satelite"
        android:title="@string/Mapa_Satelite"
        android:icon="@drawable/ic_action_map_type_satellite"
        app:showAsAction="always|withText" />        
    <item
        android:id="@+id/mapa_hibrido"
        android:title="@string/Mapa_Hibrido"
        android:icon="@drawable/ic_action_map_type_hybrid"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/mapa_terreno"
        android:title="@string/Mapa_Terreno"
        android:icon="@drawable/ic_action_map_type_terrain"
        app:showAsAction="always|withText" />

</menu>